	  strings, bidirectional samples, and disabled default panning.
	- Faster IT loading by buffering pattern, sample, and comment reads.
	- Fix loop detection edge cases broken by S3M/IT marker scan bugs.
	- Add fix for IT break to module scan (was missed in libxmp 4.5.0.)
	- Fix restart position for >64k sample and Digital Tracker MODs.
	- MOD: make presence of invert loop override tracker ID guesses.
	  M.K. modules within Amiga limits which use EFx invert loop are
	  now IDed as Protracker.
	- Multiple Digital Tracker bug fixes:
	  * Support for loading Digital Tracker 2.03 DTMs (MOD patterns).
	  * Support for loading Digital Tracker 1.9 DTMs (VERS/SV19).
	  * Better Digital Tracker version fingerprinting.
	  * Fix Digital Tracker 2.03 global sample rate and bit depth fields.
	  * Fix Digital Tracker 2.04 pattern note loading (was off-by-one).
	  * Fix Digital Tracker instrument loops (loop end was off-by-one).
	  * Allow patterns up to 396 rows in Digital Home Studio DTMs.
	  * Support for Digital Tracker 1.9 "MIDI note" transpose.
	  * Simulate Digital Tracker effects bugs where possible.
	  * Fix loading of Digital Tracker module names (not always 32 bytes).
	- Liquid Tracker bug fixes:
	  * [Old] Fix loading of module and instrument names (fixes the old
	    format version of WASTETIM.LIQ).
	  * [Old] Fix loading of instrument lengths/loops (32-bit, not 16-bit).
	  * [Old] Fix loading of pattern notes and volumes (off-by-one).
	  * [Old] Fix initial panning.
	  * [Old] Most effects are now supported. H70/H6A is not yet supported.
	    Fxx, if it was ever implemented, is not yet supported.
	  * [New] Fixed Pan Control, Retrigger, Global Volume effects, and
	    vibrato/tremolo waveform 3. P70/P6A is not yet supported.
	  * [New] Fix incorrect bounding of notes that caused several LIQs
	    to fail to load.
	  * [New] Fix loading of pattern volumes (off-by-one).
	  * [New] 16-bit samples with loops no longer cause a failed load.